# tinyoraclaw

./: .env.example  .gitignore  README.md  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  tinyclaw.sh  tinyoraclaw-presentation.html
.agents/skills/schedule/: SKILL.md
deploy/oci/: adb.tf  cloud-init.yaml  compute.tf  network.tf  outputs.tf  schema.yaml
lib/: daemon.sh
oci-genai/: README.md  proxy.py
scripts/: bundle.sh  setup-oracle.sh
src/: queue-processor.ts
src/channels/: discord-client.ts  telegram-client.ts  whatsapp-client.ts
src/lib/: conversation.ts  db.ts  invoke.ts  response.ts
src/server/: index.ts
src/visualizer/: team-visualizer.tsx
tinyoffice/: package.json
tinyoraclaw-service/: Dockerfile  pyproject.toml
tinyoraclaw-service/tests/: conftest.py  test_memory.py  test_queue.py  test_sessions.py  test_state.py  test_transcripts.py
tinyoraclaw-service/tinyoraclaw_service/: __init__.py  config.py  main.py
tinyoraclaw-service/tinyoraclaw_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tinyoraclaw-service/tinyoraclaw_service/api/: health.py  init_routes.py  memory.py  queue.py  router.py  sessions.py  state.py  transcripts.py
tinyoraclaw-service/tinyoraclaw_service/db/: connection.py  schema.py
tinyoraclaw-service/tinyoraclaw_service/models/: memory.py  queue.py  sessions.py  transcripts.py
tinyoraclaw-service/tinyoraclaw_service/services/: embedding_service.py  memory_service.py  queue_service.py  session_service.py  state_service.py  transcript_service.py
(+11 files in other folders)
